# vector-search

./: pyproject.toml
vector_search/: main.py
vector_search/api/routes/: __init__.py  commons.py  movies.py  root.py
vector_search/db/: datasource.db
vector_search/models/domain/: custom_base.py  movie.py
vector_search/models/schemas/: movies_response.py
