[tool.poetry]
name = "vector-search"
version = "0.1.0"
description = ""
authors = ["rojoyin <rojoyin@gmail.com>"]
readme = "README.md"
packages = [{include = "vector_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
