[tool.poetry]
name = "vector-search"
version = "0.1.0"
description = ""
authors = ["rojoyin <rojoyin@gmail.com>"]
readme = "README.md"
packages = [{include = "vector_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
annoy = "^1.17.3"
duckdb = "^0.8.1"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
